[package]
edition = "2021"
name = "gh-overseer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = {version = "4.4", features = ["derive"]}
env_logger = "0.10"
log = "0.4"
octocrab = "0.33"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
toml = "0.8"
